--- a/src/web/package.json
+++ b/src/web/package.json
@@ -51,9 +51,9 @@
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "prisma": "^6.5.0",
-    "react": "^18.3.1",
-    "react-day-picker": "^18.3.1",
-    "react-dom": "^19",
+    "react": "18.3.1",
+    "react-day-picker": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.54.1",
     "react-qr-code": "latest",
     "react-resizable-panels": "^2.1.7",
